--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
   <!-- copy-pasta support -->
   <script src="https://cdn.jsdelivr.net/clipboard.js/1.6.1/clipboard.min.js"></script>
 
-  <script src="{{ site.baseurl }}/resources/javascript/akka-io.js" type="text/javascript"></script>
+  <script src="{{ site.baseurl }}/resources/javascript/akka-io.js?v=01" type="text/javascript"></script>
 
   <script>hljs.initHighlightingOnLoad();</script>
 
