--- a/_includes/headertop.html
+++ b/_includes/headertop.html
@@ -39,8 +39,8 @@
     <meta name="msapplication-TileColor" content="#15a9ce">
     <!-- CSS -->
     <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{ site.baseurl }}/resources/stylesheets/style.css" type="text/css" />
-    <link href="{{ site.baseurl }}/resources/stylesheets/styles/banner.css?v=03" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/resources/stylesheets/style.css?v=01" type="text/css" />
+    <link href="{{ site.baseurl }}/resources/stylesheets/styles/banner.css?v=04" type="text/css" rel="stylesheet" />
     <link href="{{ site.baseurl }}/resources/stylesheets/styles/github.css" type="text/css" rel="stylesheet" />
     <!-- Blog feed -->
     <link rel="alternate" type="application/atom+xml" href="https://akka.io/atom.xml" />
