--- a/resources/stylesheets/sass/_reset.scss
+++ b/resources/stylesheets/sass/_reset.scss
@@ -40,7 +40,7 @@ ol, ul {
 ul.bullets {
   list-style: disc;
   list-style-position: inside;
-  margin: 10px 0 10px 10px;
+  margin: 10px 0 1.5em 10px;
 }
 ol.bullets {
   list-style: decimal;
