--- a/_includes/lightbendBanner.html
+++ b/_includes/lightbendBanner.html
@@ -1,5 +1,5 @@
 <div id="lightbend-banner" class="lightbend-banner akka full-width" data-category="OSS Lightbend Banner Impression" data-label="Akka Banner Impression">
-	<div class="oss-wrapper">
+	<div id="oss-wrapper" class="oss-wrapper">
 		<div class="oss-brand">
 			<a class="oss-track-link-label" data-category="OSS Lightbend Banner Clicks" data-label="Lightbend Logo - Akka Banner" href="https://www.lightbend.com">
 				<img class="lightbend-logo" src="{{ site.baseurl }}/resources/images/banner-logos/lightbend-reverse.svg" alt="Lightbend" title="Lightbend">
