Marketing updates feb 2022 (#839)

--- a/resources/stylesheets/sass/views/_start-page.scss
+++ b/resources/stylesheets/sass/views/_start-page.scss
@@ -214,6 +214,7 @@ div.akka-lightbend-promo {
 		font-weight: 400;
 		margin: 0;
 		font-size: .875rem;
+		min-height: 80px;
 	}
 	span {
 		color: $pri_orange;
