--- a/resources/stylesheets/sass/views/_docs.scss
+++ b/resources/stylesheets/sass/views/_docs.scss
@@ -274,8 +274,11 @@
         display: block;
         .docMetaContent {
           max-width: none;
-          padding: 0% 30% 10% 30%;
+          padding: 0% 10% 10% 10%;
           text-align: center;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
           a {
             display: inline-block;
           }
