Updated LB Banner and Akka license change (#856)

--- a/resources/stylesheets/sass/_type.scss
+++ b/resources/stylesheets/sass/_type.scss
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "ProximaNova", Arial, Helvetica, sans-serif;
   letter-spacing: 1px;
 }
-h1 {
+h1, h2.h1 {
   @include x-rem(font-size, 3);
   line-height: 1.2;
   margin-bottom: 10px;
