Show BSL in footer (#857)

--- a/_includes/footermenu.html
+++ b/_includes/footermenu.html
@@ -19,7 +19,7 @@
         </ul>
       </div>
       <p class="legal">
-        Akka is Open Source and available under the Apache 2 License.</br>
+        Akka is available under the <a href="https://www.lightbend.com/akka/license" target="_blank">Business Source License 1.1</a>.</br>
         &copy; 2011-{{ site.time | date: '%Y' }} Lightbend, Inc. |
         <a class="bright" href="https://www.lightbend.com/legal/licenses" target="_blank">Licenses</a> |
         <a class="bright" href="https://www.lightbend.com/legal/terms" target="_blank">Terms</a> |
