--- a/resources/stylesheets/sass/views/_start-page.scss
+++ b/resources/stylesheets/sass/views/_start-page.scss
@@ -108,10 +108,12 @@
 	display: flex;
 	flex-flow: wrap;
 	justify-content: space-between;
+	margin: 0 auto;
+	max-width: 970px;
 
 	span, a {
 		display: block;
-		width: 15%;
+		width: 20%;
 		border: none;
 		position: relative;
 		img {
@@ -141,19 +143,19 @@
 	@include tablet-landscape-and-below {
 		justify-content: center;
 		span, a {
-			width: 20%;
+			width: 25%;
 		}
 	}
 	@include tablet-portrait-and-below {
 		justify-content: center;
 		span, a {
-			width: 25%;
+			width: 40%;
 		}
 	}
 	@include mobile-landscape-and-below {
 		justify-content: center;
 		span, a {
-			width: 45%;
+			width: 40%;
 		}
 	}
 	@include mobile-portrait-and-below {
