--- a/_includes/footermenu.html
+++ b/_includes/footermenu.html
@@ -7,7 +7,7 @@
           <li><a class="bright" href="{{ site.baseurl }}/docs/">Documentation</a></li>
           <li><a class="bright" href="https://github.com/akka/akka">Source Code</a></li>
           <li><a class="bright" href="{{ site.baseurl }}/team/">Team</a></li>
-          <li><a class="bright" href="https://www.lightbend.com/akka-platform#subscription">Lightbend Subscription</a></li>
+          <li><a class="bright" href="https://www.lightbend.com/akka">Akka by Lightbend</a></li>
         </ul>
         <ul>
           <h2>Contribute</h2>
