doc: Adding a centralized security announcements page (#875)

--- a/_includes/footermenu.html
+++ b/_includes/footermenu.html
@@ -8,6 +8,7 @@
           <li><a class="bright" href="https://github.com/akka/akka">Source Code</a></li>
           <li><a class="bright" href="{{ site.baseurl }}/team/">Team</a></li>
           <li><a class="bright" href="https://www.lightbend.com/akka">Akka by Lightbend</a></li>
+          <li><a class="bright" href="{{ site.baseurl }}/security">Security Announcements</a></li>
         </ul>
         <ul>
           <h2>Contribute</h2>
